Update source code

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -17,6 +17,7 @@
             <th data-column-id="title">Title</th>
             <th data-column-id="author">Author</th>
             <th></th>
+            <th></th>
         </tr>
         </thead>
         <tbody>
@@ -40,8 +41,7 @@
                 <td><input type="text" id="author" name="author"></td>
             </tr>
         </table>
-        <input type="hidden" id="id"/>
-        <input type="hidden" name="_method" value="PUT">
+        <input type="hidden" id="id" name="id"/>
 
         <div>
             <button id="submitBtn" class="btn btn-primary">Add Book</button>
